force extreme focus protection

this should help with all cases of the auth dialog not having focus.
with extreme protection nothing should be able to automatically steal
focus from the auth dialog. user input is still respected same as before
though

BUG: 312325